RESOLVED FIXED22913
REGRESSION: Space bar doesn't scroll on windows
https://bugs.webkit.org/show_bug.cgi?id=22913
Summary REGRESSION: Space bar doesn't scroll on windows
Adam Barth
Reported 2008-12-18 01:31:08 PST
Steps to reproduce: 1) Visit any page with a vertical scroll bar 2) Press the space button Expected result: Page scrolls down Actual result: Nothing happens This does not appear to reproduce on Mac. Sorry, I don't have a good regression window for this, but its amazingly annoying.
Attachments
Fixing the bug (712 bytes, patch)
2009-01-06 12:29 PST, Mohamed Mansour
no flags
patch (5.54 KB, patch)
2009-01-09 16:23 PST, Darin Adler
darin: review+
Michael Wexler
Comment 1 2009-01-05 08:46:34 PST
Mark Rowe (bdash)
Comment 2 2009-01-05 21:13:48 PST
No, bug 18030 was a Mac-only regression and was addressed 10 months ago.
Mohamed Mansour
Comment 3 2009-01-05 22:19:24 PST
(In reply to comment #1) > Related at all to https://bugs.webkit.org/show_bug.cgi?id=18030? > The other one was 10 month ago, this bug revived from the dead :) BTW with the help of bdash on IRC, I have checked all the nightly builds "almost" to see when the regression happened. FAILS in r38705 2008-11-24 CRASH in r38677 2008-11-22 CRASH in r38672 2008-11-22 CRASH in r38670 2008-11-21 CRASH in r38651 2008-11-21 WORKS in r38492 2008-11-17 FAILS means that the space bar doesn't scroll on windows WORKS means that the space bar does scroll on windows CRASH means that I cannot run that nightly build due to incompatible versions, I tried Safari 3.2.1 and 3.1.2. Basically it worked and 4 builds after it broke. I can look into it tomorrow to see the diffs of the affected files, unless someone else more experienced in those areas can figure it out. Phew, my testing is over, time to sleep :) Binary Search 18 nightly builds to get those results. I hope this could be of any help to start figuring out this annoying bug.
Mohamed Mansour
Comment 4 2009-01-06 12:29:56 PST
Created attachment 26466 [details] Fixing the bug Between 38629 and 38410 for Editor.cpp it broke space scroll. This patch is to revert the change. And I tested it, and works fine as it should be.
Mark Rowe (bdash)
Comment 5 2009-01-07 16:36:49 PST
Mark Rowe (bdash)
Comment 6 2009-01-07 16:38:00 PST
Darin, it sounds like your change in <http://trac.webkit.org/changeset/38629> caused this.
Darin Adler
Comment 7 2009-01-09 16:23:21 PST
Darin Adler
Comment 8 2009-01-09 16:42:27 PST
Darin Adler
Comment 9 2009-01-09 16:42:39 PST
Comment on attachment 26584 [details] patch Jon Honeycutt reviewed this.
Adam Barth
Comment 10 2009-01-14 09:48:35 PST
The space bar is still broken. Now the window scrolls even if you are entering text into an input box. Test case: 1) Search for "dog" on google. 2) Type a space in the search box on the top of the page. Notice that he window scrolls instead of putting the space in the box.
Darin Adler
Comment 11 2009-01-14 09:57:58 PST
(In reply to comment #10) > The space bar is still broken. Now the window scrolls even if you are entering > text into an input box. Test case: > > 1) Search for "dog" on google. > 2) Type a space in the search box on the top of the page. > > Notice that he window scrolls instead of putting the space in the box. Yes, others noticed that and opened a new bug about it, bug 23277, which is now fixed. Could you try testing again?
Adam Barth
Comment 12 2009-01-14 10:03:02 PST
(In reply to comment #11) > Could you try testing again? Oh, ok. I was testing with the nightly which missed that fix by 10 revisions.
Note You need to log in before you can comment on or make changes to this bug.